Fixes layout issues.

--- a/app/components/Header/styles.css
+++ b/app/components/Header/styles.css
@@ -8,7 +8,7 @@
   padding: 10px;
   right: 0;
   left: 0;
-  height: 50px;
+  height: 60px;
 }
 
 .headerinner {
