--- a/app/containers/App/styles.css
+++ b/app/containers/App/styles.css
@@ -1,11 +1,15 @@
 .content {
   background: #F4F8F9;
   overflow-y: auto;
-  height: 100vh;
-  position: relative;
+  /* height: 100vh; */
+  position: fixed;
   color: #6A7088;
   margin-left: 100px;
   font-family: 'Lato';
+  top: 60px;
+  right: 0;
+  left: 0;
+  height: 100%;
 }
 
 .innercontent {
